objects/ManuClub_Client_Device_Acct__c/ManuClub_Client_Device_Acct__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Client_Device_Acct</label>
    <nameField>
        <label>ManuClub_Client_Device_Acct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManuClub_Client_Device_Acct</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>