objects/ManuClub_Client_Device_Acct__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account_ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>