objects/ManuClub_Client_Device_Acct__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <label>Change_Date</label>
    <type>DateTime</type>
</CustomField>