objects/ManuClub_Client_Device_Acct__c/fields/Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Club_ID__c</fullName>
    <label>Club_ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>